<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:scaleType="centerCrop"
        android:src="@drawable/sample_poster"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/movie_poster"
        app:layout_constraintBottom_toTopOf="@id/select_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="20dp"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold"
                tools:text="영화제목" />

            <TextView
                android:id="@+id/movie_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="상영일 : 2003.02.10~2003.02.15" />

            <TextView
                android:id="@+id/running_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="러닝타임 : 100분" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/select_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/selected_date"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/movie_time"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/minus_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/minus"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/ticket_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                tools:text = "0"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/plus_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plus"
                android:textSize="25sp" />
        </LinearLayout>

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="24dp"
            android:text="@string/confirm_select" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
